@startuml
title InternityManager - Class Diagram
hide circle
skinparam classAttributeIconSize 0

class InternityManager {
    - scanner: Scanner
    + InternityManager(storagePath: String)
    + start(): void
    - loadData(): void
    - saveData(): void
    - configureUsername(): void
    - isValidUsername(username: String): boolean
    - isAsciiOnly(str: String): boolean
}

class CommandParser
class InternshipList
class Storage
class Ui
abstract class Command

InternityManager --> CommandParser : uses >
InternityManager ..> InternshipList
InternityManager ..> Storage
InternshipList ..> Ui
CommandParser ..> Command
InternshipList --> Storage : loads\nand\nsaves >

@enduml
